
PLCButtonPanel.cs  
    PLCShowSearchButtons()                              -- added to new property to show Analyst search and clear buttons
    dynactrl()                                          --
        if (PLCShowSearchButtons)
    
    protected void searchbutton_Click(object sender, EventArgs e)
    protected void clearbutton_Click(object sender, EventArgs e)
    public void ShowAlert(Page page)

    GetTablesAndAlias()                                 -- added helper functions
    GetTableNameAndAlias()
    GetTableFieldJoins()

AnalystSearch.aspx                                      -- added new page for Analyst Search
AnalystSearch.aspx.cs                                   
    protected void Page_Load(object sender, EventArgs e)
    private void RestoreSearchCriteria()                

TV_AUTHCODE
    'ANALSEARCH', 'Analyst Search', '0', 'Program Access/PRELIMS/Web'       -- added to be used as user option for Analyst Search button

PLCCONTROLS
    ButtonPanelHelper.cs                                -- added to reuse existing logic from helper class and common functions that cant be accessed due to circular dependency error. 

-- 
MSQL-VENTURA-DEV
    MSQL_INSERT_DBGRIDDL
    MSQL_INSERT_DBGRIDHD
    MSQL_INSERT_DBPANEL

ORCL-NJSPDEV
    ORCL_INSERT_DBGRIDDL
    ORCL_INSERT_DBGRIDHD
    ORCL_INSERT_DBPANEL

PLCButtonPanel.cs
    dynactrl()
        if (PLCShowSearchButtons)       - moved above PLCCustomButtons

    SearchButton_Click
        - events => PascalCase
        - variable => camelCase
        - reduced FindControl usage
    
    ClearButton_Click
        - events => PascalCase
        - variable => camelCase
        - reduced FindControl usage
        - added "Select criteria then click 'Search' button."
        - clears saved session criteria upon click

    ShowAlert
        - changed alert to Alert to apply Utility.js Alert function

PLC_SessionVars.cs
    DefaultLocalizedTextValue
        {"AnalystSearch_PageTitle", "Analyst Search"},